--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "email-validator": "^2.0.4",
     "firebase": "^9.9.0",
     "moment": "^2.29.4",
-    "next": "12.2.2",
+    "next": "^12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-input-emoji": "^4.1.0",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "timeago-react": "^3.0.5"
   },
